tests/core/snapshots/test-set-cookie-headers.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server(headers: { setCookies: true }, hostname: "0.0.0.0", port: 8000)
@upstream
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Query {
  user(id: Int!): User
  @http(url: "http://jsonplaceholder.typicode.com/users/{{.args.id}}")
}

type User {
  email: String!
  id: Int!
  name: String!
  phone: String
  username: String!
  website: String
}
