tests/core/snapshots/test-upstream-headers.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server
@upstream(allowedHeaders: ["X-bar", "x-foo"])
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Post {
  id: Int
}

type Query {
  barField: String @expr(body: "{{.headers.x-bar}}")
  fooField: String @expr(body: "{{.headers.x-foo}}")
  posts: [Post] @http(url: "http://jsonplaceholder.typicode.com/posts")
}
