tests/core/snapshots/test-upstream.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server
@upstream(proxy: { url: "http://localhost:8085" })
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Query {
  hello: String @http(url: "http://localhost:8000/hello")
}
