tests/core/snapshots/with-nesting.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream @link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Post {
  body: String
  id: Int
  title: String
  userId: Int
}

type Query {
  user: User @http(url: "http://jsonplaceholder.typicode.com/users/1")
}

type User {
  email: String!
  id: Int!
  name: String!
  phone: String
  posts: [Post]
  @http(url: "http://jsonplaceholder.typicode.com/users/{{.value.id}}/posts")
  username: String!
  website: String
}
